--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Palindrome</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Palindrome Checker</title>
 </head>
 <body>
-    
+  <h1>Palindrome Checker</h1>
+  <input type="text" id="userInput" placeholder="Enter a word or phrase">
+  <button onclick="checkPalindrome()">Check</button>
+  <p id="result"></p>
+  <script src="./script/script.js"></script>
 </body>
 </html>
